initial files to save

--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
     <script src="js/text_effect.js"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    
 </head>
+
+
+<nav>
+    <div class="buttons-island">
+        <button type="button" class="btn btn-outline-warning">TENERIFE</button>
+        <button type="button" class="btn btn-outline-warning">GRAN CANARIA</button>
+        <button type="button" class="btn btn-outline-warning">LANZAROTE</button>
+        <button type="button" class="btn btn-outline-warning">FUERTEVENTURA</button>
+    </div>
+</nav>
 
 <body>
     <div class="container">
         <div class="text"></div>
-        <!--<div class="buttons">-->
-        <!--    <button type="button" class="btn btn-outline-warning">TENERIFE</button>-->
-        <!--    <button type="button" class="btn btn-outline-warning">GRAN CANARIA</button>-->
-        <!--    <button type="button" class="btn btn-outline-warning">LANZAROTE</button>-->
-        <!--    <button type="button" class="btn btn-outline-warning">FUERTEVENTURA</button>-->
     </div>
     <script>
         var phrases = [
