--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <script>
         var phrases = [
-            'YOUR NEXT DREAM HOLIDAY?',
+            'YOUR NEXT DREAM HOLIDAY IN CHEESE?',
             'DESTINATION: CANARY ISLANDS'
         ];
         var el = document.querySelector('.text');
